src/objects/Apttus_Approval__Backup_Approver__c.object
<CustomObject>
    <description>Allows approvers and administrators to specify backup approvers.  There is an option to transfer all pending request from and to the approver and the backup approver upon activation or cancellation of backups.  The approvals engine automatically routes requests to backup approvers when this is in effect.</description>
    <fields>
        <fullName>Apttus_Approval__Backup_Action__c</fullName>
        <description>Backup action</description>
        <formula>IF(NOT(Apttus_Approval__InEffect__c), HYPERLINK(&quot;/apex/Apttus_Approval__BackupApproverAction?approverId=&quot; &amp;Apttus_Approval__Current_User__c &amp; &quot;&amp;backupApproverAction=activate&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Activate&quot;, &quot;Activate Backup&quot;), &quot;_self&quot;), IF(AND(Apttus_Approval__InEffect__c,Apttus_Approval__IsActive__c), HYPERLINK(&quot;/apex/Apttus_Approval__BackupApproverAction?approverId=&quot; &amp;Apttus_Approval__Current_User__c &amp; &quot;&amp;backupApproverAction=deactivate&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Deactivate&quot;, &quot;Deactivate Backup&quot;), &quot;_self&quot;), &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Action to activate or deactivate the backup</inlineHelpText>
        <label>Backup/Delegate Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Backup_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup/Delegate User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028l1cEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Cancellation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Current_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028l1fEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DelegateUserIds__c</fullName>
        <description>IDs of approvers who were designated as Delegate of Backup</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IDs of approvers who were designated as Delegate of Backup</inlineHelpText>
        <label>Delegate Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Effective_Date__c</fullName>
        <description>Backup effective date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter data to begin the backup/delegation.  To begin immediately, leave the field blank.  Note: regardless of selection, the Activate button must be pressed to launch the immediate or future backup/delegation.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Expiration_Date__c</fullName>
        <description>Backup expiration date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter an expiration date only if you need the system to expire it automatically at a future date. Otherwise use the Deactivate button on the next screen to cancel the backup immediately</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__InEffect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Effect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsDelegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the this entry is for delegate user.</description>
        <inlineHelpText>- If box is checked: Approver/Validator and assigned Delegate(s) will get notified.
- If box is NOT checked: it is a complete delegation = ONLY the assigned Delegate will be notified, NOT the original Approver/Validator.</inlineHelpText>
        <label>Is Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SuppressDelegateNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to enable/disable notification to Delegate Approver</description>
        <inlineHelpText>Indicator to enable/disable notification to Delegate Approver</inlineHelpText>
        <label>Suppress Delegate Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Transfer_in_flight__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transfer in-flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_All_User_Names__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delegate All User Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Backup_Delegate_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Backup_Delegate_Approvers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Backup_Delegate_Approvers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NSA_Compliant_Current_User__c</fullName>
        <formula>Apttus_Approval__Current_User__r.NSA_Compliant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSA Compliant_Current User</label>
        <type>Checkbox</type>
    </fields>
    <label>Backup/Delegate Approver</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>Apttus_Approval__Backup_User__c</columns>
        <columns>NAME</columns>
        <columns>Apttus_Approval__InEffect__c</columns>
        <columns>Apttus_Approval__IsActive__c</columns>
        <columns>Apttus_Approval__Transfer_in_flight__c</columns>
        <columns>Apttus_Approval__Current_User__c</columns>
        <columns>Delegate_All_User_Names__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Apttus_Approval__Effective_Date__c</columns>
        <columns>Apttus_Approval__Expiration_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Delegates</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Current_User__c</columns>
        <columns>Apttus_Approval__IsActive__c</columns>
        <columns>Apttus_Approval__IsDelegate__c</columns>
        <columns>Delegate_Approver1__c</columns>
        <columns>Delegate_Approver2__c</columns>
        <columns>Delegate_Approver3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Approval__Current_User__c</field>
            <operation>contains</operation>
            <value>Renaud Mary</value>
        </filters>
        <label>My Delegates</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Current_User__c</columns>
        <columns>Apttus_Approval__IsDelegate__c</columns>
        <columns>Delegate_All_User_Names__c</columns>
        <columns>Apttus_Approval__Backup_User__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Apttus_Approval__Backup_Action__c</columns>
        <columns>Apttus_Approval__InEffect__c</columns>
        <columns>Apttus_Approval__IsActive__c</columns>
        <columns>Apttus_Approval__Transfer_in_flight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Approval__Current_User__c</field>
            <operation>equals</operation>
            <value>Marc La Fay</value>
        </filters>
        <label>Search</label>
    </listViews>
    <nameField>
        <displayFormat>BU-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup/Delegate Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NF_OwnDelegates</fullName>
        <active>true</active>
        <description>Users should only be able to create their own delegates.</description>
        <errorConditionFormula>AND( Apttus_Approval__Current_User__c &lt;&gt; $User.Id , 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, $Profile.Name &lt;&gt; &apos;Global Process Admin Profile&apos;, $Profile.Name &lt;&gt; &apos;Nokia Admin Profile&apos;,$Profile.Name &lt;&gt; &apos;Sales Ops Profile&apos; )</errorConditionFormula>
        <errorDisplayField>Apttus_Approval__Current_User__c</errorDisplayField>
        <errorMessage>You can only create your own delegates !</errorMessage>
    </validationRules>
</CustomObject>